Completed form css, fixed successful update notification text not showing, and fixed edgecase, added scroll location memory
edgecase was, if the user changed the unit's code, the unit's icon would no longer be accessible as it was under a different unit code and the name of the icon is outdated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,27 +29,87 @@ header
     padding: 0px 5%;
 }
 
-#form-container
+.form-container
 {
-    border-radius: 5px;
+    text-align: left;
+    border-radius: 20px;
+    padding: 20px 32px;
     background-color: #242424;
-    margin-left: 25%;
-    margin-right: 25%;
+    width: 40%;
+    margin-left: 30%;
+}
+
+.form-container [type=submit] 
+{
+    font-size: 1.2em;
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.icon_button
+{
+    font-size: 1.2em;
+    background-color: rgb(0, 124, 186);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 14px 20px;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+.form-container img
+{
+    border: 1px solid white;
+    border-radius: 4px;
+    width: 50%;
+}
+
+.form-container input[type=submit]:hover 
+{
+    background-color: #45a049;
 }
 
 label
 {
-    padding: 12px 12px 12px;
+    padding: 12px 12px 12px 0px;
     display: inline-block;
     font-size: 1.2em;
 }
 
-input[type=text], select
+.form-container input[type=text], .form-container select
 {
+    font-size: 1.2em;
+    width: 100%;
+    padding: 9px 15px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.form-container input[type=checkbox]
+{
+    height: 25px;
+    width: 25px;
+    transform: translateY(20%);
+}
+
+.submit-desire
+{
+    font-size: 1.2em;
     padding: 8px;
+    width: 20%;
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+    transform: translateY(-10%);
 }
 
 #desire
@@ -166,13 +226,6 @@ input[type=text], select
     margin-right: 4%;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-}
-
-.icon_button
-{
-    background-color: gray;
-    border: white;
-    padding: 2px;
 }
 
 .notification-text
